<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#03A9F4"
    tools:context=".AuthActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:textColor="#F8F9FA"
        android:layout_gravity="center"
        android:layout_marginTop="170dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/log_in_to_your_account" />

    <EditText
        android:id="@+id/user_login_auth"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
        android:textColorHint="#5D5160"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="#fdfdfd"
        android:hint="@string/enter_your_login"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/user_pass_auth"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
        android:textColorHint="#5D5160"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="#fdfdfd"
        android:hint="@string/enter_your_password"
        tools:ignore="Autofill,LabelFor" />

    <Button
        android:id="@+id/button_auth"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/authorize"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:layout_gravity="center"
        android:backgroundTint="#F44336"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/link_to_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="110dp"
        android:fontFamily="@font/inter"
        android:text="@string/to_register"
        android:textColor="#F8F9FA"
        android:textSize="15sp" />

</LinearLayout>